--- a/config/database.yml
+++ b/config/database.yml
@@ -24,8 +24,16 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  #<<: *default
   #database: db/test.sqlite3
+
+  adapter: mysql2
+  encoding: utf8
+  database: bookingsync_api_test
+  pool: 5
+  username: bookingsync
+  password: 123456
+
 
 production:
   <<: *default
